--- a/Desktop/picom.conf
+++ b/Desktop/picom.conf
@@ -1,4 +1,14 @@
 opacity-rule = [
-	"90:class_g = 'kitty' && focused",
-	"60:class_g = 'kitty' && !focused"
+	"90:class_g = 'Alacritty' && focused",
+	"60:class_g = 'Alacritty' && !focused"
 ];
+
+blur-background = true;
+blur-background-frame = true;
+
+blur:
+{
+	method = "gaussian";
+	size = 10;
+	deviation = 10.0;
+}
